--- a/style/termStyle.css
+++ b/style/termStyle.css
@@ -1,10 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
-main{
-    width: 100vw;
-    height: 100vh;
-}
-
 #main-container{
     width: 100%;
     max-width: 100vw;
